k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: social
spec:
  type: ClusterIP
  selector: { app: frontend }
  ports:
    - name: http
      port: 80
      targetPort: http
